fix(styles): update text alignment to use 'start' and 'end' for better compatibility

--- a/packages/docusaurus-plugin-debug/src/theme/DebugLayout/styles.module.css
+++ b/packages/docusaurus-plugin-debug/src/theme/DebugLayout/styles.module.css
@@ -64,7 +64,7 @@
   .navlink {
     width: 80%;
     margin-top: 20px;
-    text-align: left;
+    text-align: start;
   }
 
   .container {
